# streamrag

./: .env.example  .gitignore  .pylintrc  README.md  main.py  pyproject.toml  run.py
.github/workflows/: ci.yml
src/docs/: prompt_general.txt  prompt_grounded.txt  schema.sql
src/scripts/: _util.py  answer.py  embed.py  embed_and_search.py  init_db.py  search.py
src/streamrag/: api.py
src/streamrag/web/: index.html  styles.css
